2009-03-17  Armin Burgmeier  <armin@openismus.com>

	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj: Added activatable.[h|cc] and
	orientable.[h|cc] to the project.

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops: Disable warning 4312,
	since a glib 2.20 header file triggers it, and this clutters the
	compiler output otherwise.

	* win32_installer/README:
	* win32_installer/build-installer:
	* win32_installer/gtkmm-installer.nsi.in:
	* win32_installer/install-msvc-module:
	* win32_installer/Makefile.am:
	* win32_installer/redist_README.txt: Adapt for gtkmm 2.16. Added a
	redist/ folder to the installer which contains optimized and stripped
	binaries, and removed the option to set the PATH environment variable.
	We set it always now as it is required for running built applications.

2009-03-17  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/stockid.cc: Implement operator().
	* gtk/src/textbuffer.ccg: Actually implement the const get_text(bool) 
	method. These fix undefined symbol linker errors when people try to use 
	these methods.

2.16.0:

2009-03-16  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Makefile.am: Break the html and devhelp install/uninstall 
	rules up and generally base them on what is now in pangomm, thanks to 
	Theppitak Karoonboonyanan, to fix the distcheck.

2009-03-16  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/pixbufanimation.[hg|ccg]: create_from_file(): Throw an exception 
	when the GError is not null.
	
	* gtk/src/entry.[hg|ccg]: *_icon_* methods(): Rearrange parameters to make 
	these consistent and so we can have more default parameter values.
	
	* gdk/src/pixbufanimation.hg:
	* gdk/src/pixbufanimationiter.hg:
	* gdk/src/dragcontext.hg:
	* gtk/src/accelgroup.hg:
	* gtk/src/enums.hg:
	* gtk/src/iconset.hg:
	* gtk/src/printoperationpreview.hg: Dealt with some documentation TODOs.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/entry.hg: