@@ -1,3 +1,11 @@
+2009-03-23  Daniel Elstner  <danielk@openismus.com>
+
+	* gtk/src/builder.{ccg,hg}: Conditionalize all exception handling
+	code in order to fix the build with --disable-api-exceptions.
+	* gtk/src/printjob.hg: ditto,
+	* demos/gtk-demo/example_images.cc: ditto,
+	* demos/gtk-demo/example_treeview_treestore.cc: ditto,
+
 2009-03-17  Armin Burgmeier  <armin@openismus.com>
 
 	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
